[package]
name = "pallet-evm-precompile-peaq-did"
description = "A Precompile Module for Frontier EVM that implements the PEAQ DID standard."
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false, features = [ "forbid-evm-reentrancy" ] }
pallet-timestamp = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = [ "max-encoded-len" ]}
paste = { workspace = true, default-features = false }
peaq-pallet-did = { workspace = true, default-features = false }
precompile-utils = { workspace = true, default-features = false }
slices = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"peaq-pallet-did/std",
	"pallet-timestamp/std",
]
