[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = "0.1.2"
hex = { version = "0.4.3", default-features = false }
impl-trait-for-tuples = "0.2.2"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.8"
sha3 = { version = "0.9", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { git = "https://github.com/peaqnetwork/substrate", default-features = false , branch = "peaq-polkadot-v0.9.38" }
sp-std = { workspace = true }

# Frontier
evm = { version = "0.37.0", default-features = false, features = [ "with-codec" ] }
fp-evm = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.38", default-features = false }
pallet-evm = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.38", default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "similar-asserts", "std" ]
