[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = { workspace = true }
hex = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
paste = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
similar-asserts = { workspace = true, default-features = false, optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Frontier
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "similar-asserts", "std" ]
