[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
affix = { workspace = true }
derive_more = { workspace = true, optional = true, features = ["display"] }
environmental = { workspace = true }
evm = { workspace = true, features = [ "with-codec" ] }
frame-support = { workspace = true }
frame-system = { workspace = true }
fp-evm = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }
parity-scale-codec = { workspace = true }
paste = { workspace = true }
precompile-utils-macro = { workspace = true }
scale-info = { workspace = true, optional = true, features = [ "derive" ] }
serde = { workspace = true, optional = true }
sha3 = { workspace = true }
similar-asserts = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
xcm = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = [ "std" ]
std = [
	"environmental/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std" ]
