[package]
name = "pallet-evm-precompile-vesting"
authors = [ "peaq" ]
description = "A Precompile Module for Frontier EVM that implements the PEAQ Vesting standard."
edition = "2021"
version = "0.1.0"

[dependencies]
hex = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
paste = { workspace = true, default-features = false }
slices = { workspace = true, default-features = false }

# Peaq
precompile-utils = { path = "../utils", default-features = false }
peaq-primitives-xcm = { path = "../../primitives/xcm", default-features = false }

# Substrate
parity-scale-codec = { workspace = true, default-features = false, features = [ "max-encoded-len" ]}
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-balances = { workspace = true }
pallet-vesting = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false, features = [ "forbid-evm-reentrancy" ] }

[dev-dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

precompile-utils = { path = "../utils", features = [ "std", "testing" ] }

pallet-timestamp = { workspace = true, features = [ "std" ] }
scale-info = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"pallet-vesting/std",
	"pallet-balances/std",
	"peaq-primitives-xcm/std",
	"sp-runtime/std",
]
