[package]
name = "pallet-evm-precompile-xcm-utils"
authors = [ "peaq" ]
description = "A Precompile to make xcm utilities accessible to pallet-evm"
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }

# Peaq
precompile-utils = { path = "../utils", default-features = false, features = [ "codec-xcm" ] }
# xcm-primitives = { workspace = true }

# Substrate
frame-support = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

# Frontier
fp-evm = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false, features = [ "forbid-evm-reentrancy" ] }

# Polkadot / XCM
pallet-xcm = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }

[dev-dependencies]
env_logger = "0.9"
derive_more = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

# Peaq
precompile-utils = { path = "../utils", features = [ "testing" ] }

# # Substrate
pallet-balances = { workspace = true, features = [ "std" ] }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "max-encoded-len" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-io = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true, default-features = false }

# Polkadot
polkadot-parachain = { workspace = true, default-features = false }
xcm-builder = { workspace = true, features = [ "std" ] }

# ORML
orml-traits = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"polkadot-parachain/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-weights/std",
	"pallet-xcm/std",
	"pallet-balances/std",
	"cumulus-primitives-core/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
