[package]
name = "peaq-primitives-ext"
authors = ['peaq network <https://github.com/peaqnetwork>']
edition = "2021"
homepage = 'https://peaq.network/'
license = "GPL-3.0-only"
repository = 'https://github.com/peaqnetwork/peaq-network-node/'
version = "0.1.0"

[dependencies]
ethereum-types = { version = "0.13.1", default-features = false }

evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-externalities = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }
sp-runtime-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.29", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
