[package]
name = "peaq-primitives-ext"
license = "GPL-3.0-only"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
ethereum-types = { workspace = true }

evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }

# Substrate
codec = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
