[package]
name = "peaq-primitives-ext"
authors = ['peaq network <https://github.com/peaqnetwork>']
edition = "2021"
homepage = 'https://peaq.network/'
license = "GPL-3.0-only"
repository = 'https://github.com/peaqnetwork/peaq-network-node/'
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true }

evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }

# Substrate
parity-scale-codec = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"evm-tracing-events/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
