[package]
name = "peaq-primitives-xcm"
version = "3.0.0-polkadot-v0.9.38"
authors = ["peaq network <https://github.com/peaqnetwork>"]
homepage = 'https://peaq.network/'
edition = "2021"

[dependencies]
bstringify = { workspace = true }
serde = { workspace = true }
parity-scale-codec = { workspace = true }
num_enum = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
evm = { workspace = true }
scale-info = { workspace = true }
sha3 = { workspace = true }
serde_json = { workspace = true }
frame-support = { workspace = true }
zenlink-protocol = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"num_enum/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"evm/std",
	"evm/with-serde",
	"frame-support/std",
	"zenlink-protocol/std",
]
