[package]
name = "peaq-primitives-xcm"
version = "3.0.0-polkadot-v0.9.43"
authors = ["peaq network <https://github.com/peaqnetwork>"]
homepage = 'https://peaq.network/'
edition = "2021"

[dependencies]
log = { workspace = true }
bstringify = { workspace = true }
serde = { workspace = true, default-features = false, optional = true }
parity-scale-codec = { workspace = true }
num_enum = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
evm = { workspace = true }
scale-info = { workspace = true }
sha3 = { workspace = true }
serde_json = { workspace = true, optional = true }
frame-support = { workspace = true, default-features = false }
zenlink-protocol = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
xc-asset-config = { path = "../../pallets/xc-asset-config", default-features = false }
pallet-evm = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"log/std",
	"scale-info/std",
	"parity-scale-codec/std",
	"num_enum/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"evm/std",
	"evm/with-serde",
	"frame-support/std",
	"pallet-assets/std",
	"pallet-evm/std",
	"xc-asset-config/std",
	"xcm-executor/std",
	"xcm/std",
	"xcm-builder/std",
	"zenlink-protocol/std",
	"orml-traits/std",
	"serde",
	"serde_json",
]
